welcome.lessons.welcome.bat.bool1.Makes10.scala.error
makes10:3: error: ')' expected but 'else' found.
	else {return true }
        ^